# DRF_SessionAuth

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
SessionBaseAuth/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts_profile/migrations/: 0001_initial.py
